# drf_template

./: .gitignore  README.md
poetry/: pyproject.toml
src/: db.sqlite3
src/core/: docs.py  models.py  settings.py  urls.py
src/someapp/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
src/someapp/migrations/: 0001_initial.py  0002_alter_track_duration_alter_track_order.py  0003_alter_album_id.py  0004_alter_track_duration.py  0005_alter_track_id.py  0006_alter_track_table.py
src/tests/: test_drf_template.py
