[tool.poetry]
name = "drf_template"
version = "0.1.0"
description = ""
authors = ["Valiev T.M. <cptchunk@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"
Pillow = "^9.1.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
